# myfinance

./: .gitignore  .python-version  .renderignore  COMPLETE_SCREENSHOT_UPDATE_SUMMARY.md  CORREÇÃO_FINAL_VITEST.md  CORREÇÃO_REACT_ACT.md  CORREÇÃO_VITEST.md  CORREÇÕES_ADICIONAIS.md  CREATE_PR_INSTRUCTIONS.md  DOCS_DEPLOYMENT_FIX.md  Dockerfile  FINAL_SUMMARY.md  FLASK_MIGRATION_GUIDE.md  GEMINI.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_PAGES_FIX.md  INSTRUÇÕES_CRIAR_PR.md  PR_AUTH_SYSTEM.md  PR_DRAFT_TESTING.md  PR_FLASK_MIGRATION.md  PR_TEMPLATE.md  README-DEPLOY.md  README-SOLUCOES.md  README.md  RENDER_SETUP.md  SCREENSHOT_DOC_UPDATE_SUMMARY.md  SCREENSHOT_UPDATE_SUMMARY.md  SOLUCAO_ACT_CLI.md  alembic.ini  build.sh  commit_message.txt  coverage.xml  create_pr.sh  env.example  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  playwright_tests.py  (+29 more)
.github/workflows/: deploy-docs.yml  deploy.yml  migrate-database.yml  test-local.yml
.trae/rules/: project_rules.md
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  173ad7416018_merge_heads.py  49c69a18767d_add_category_id_to_transactions_table.py  8b6b7108caa1_add_revoked_tokens_table.py  9feb93f37ce2_create_user_profiles_table.py  add_password_hash_to_user_profiles.py  b2f5g4h6i1j3_add_categories_table.py  d5c074db4dc5_fix_user_profiles_table_structure.py  e8623ad7c0cd_configure_rls_and_sync_user_profiles.py
database/: README.md  create_tables.sql  setup.sh  verify_database.py
docs/: deploy.md  fase2-detalhada.md  index.md  local-testing.md  roadmap.md
docs/dev/: autenticacao-guia-desenvolvedor.md  categorias-guia-desenvolvedor.md  database-migration-production.md  env-setup.md  glitchtip-implementation.md  index.md  migration-sqlalchemy-summary.md  screenshots-playwright.md  supabase-environments.md  testes-cobertura.md
docs/fase2/: README.md
docs/screenshots/: README.md
docs/user/: autenticacao-guia-usuario.md  categorias-guia-usuario.md  index.md  polimento-fase-2.md  transacoes-guia-usuario.md
e2e/: transactions-page.spec.ts
frontend/: package-lock.json  package.json  tsconfig.test.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/coverage/: App.tsx.html  clover.xml  index.html  (+2 more)
scripts/: README_cleanup.md  add_password_hash_column.sql  apply_migration.py  apply_migrations.py  apply_production_migrations.py  auto_fix_email_confirmation.py  check_confirmation_status.py  check_email_config.py  check_migration_status.py  check_pending_migrations.py  check_user_status.py  clean_and_register.py  clean_orphaned_data.sql  clean_specific_users_supabase.sql  clean_user_data.py  clean_user_data_for_testing.sql  clean_users_supabase.sql  complete_cleanup_and_fix.sql  complete_email_fix.py  configure_auth_settings.py  configure_smtp.py  configure_smtp_curl.sh  create_user_in_auth.sql  create_user_manually.sql  create_user_profiles_supabase.sql  create_user_via_api.py  debug_auth_issue.py  demo-docker.sh  diagnose_email_confirmation.sql  final_email_fix.py  fix_email_via_local_api.py  fix_orphaned_user.py  fix_user_profiles_supabase.sql  force_confirm_and_test.py  force_confirm_email.sql  force_recreate_user_profiles.sql  generate_schema.py  initialize_production_database.py  list_routes.py  list_users_supabase.sql  (+28 more)
src/: app.py  config.py  custom_types.py  database.py  database_direct.py  database_sqlalchemy.py  main.py  main_direct.py  models.py  routes.py
supabase/: config.toml  schema.sql
tests/: conftest.py  test_auth_endpoints.py  test_auth_models.py  test_auth_security.py  test_auth_service.py  test_categories_routes.py  test_flask_app.py  test_transactions.py  test_transactions_simple.py  test_user_registration.py
(+104 files in other folders)
