[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myfinance"
version = "0.1.0"
description = "Sistema de finanças pessoais"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
backend = [
    "fastapi",
    "uvicorn",
    "supabase",
    "psycopg2-binary",
    "sqlalchemy",
    "alembic"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin"
]
dev = [
    "invoke"
]
test = [
    "pytest",
    "httpx",
    "pytest-cov"
]
security = [
    "safety"
] 
quality = [
    "ruff",
    "radon",
    "bandit"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing" 

[tool.coverage.run]
relative_files = true 
source = ["src"]