[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myfinance"
version = "0.1.0"
description = "Sistema de finanças pessoais"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
backend = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "supabase==2.0.2",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin"
]
dev = [
    "invoke",
    "python-dotenv==1.0.0"
]
test = [
    "pytest",
    "httpx",
    "pytest-cov"
]
security = [
    "safety"
]
quality = [
    "ruff",
    "radon",
    "bandit"
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing" 

[tool.coverage.run]
relative_files = true 
source = ["src"]
